--- a/form.html
+++ b/form.html
@@ -3,23 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/styles.css">
     <title>Form</title>
+    <link rel="stylesheet" href="style/navfoooter.css">
+    <style>
+        fieldset{
+            margin-top: 20px;
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #000;
+            }
+
+            legend{
+                font-size: 15px;
+                font-weight: bold;
+            }
+
+            label{
+                padding: 10px;
+                margin: 10px;
+                font-size: 15px;
+                font-weight: 500;
+            }
+
+            .btn{
+                padding: 10px;
+                margin: 10px;
+                font-size: 15px;
+                font-weight: 500;
+                cursor: pointer;
+                background-color: #000;
+                color: #fff;
+                border: none;
+                border-radius: 10px;
+            }
+    </style>
 </head>
 <body>
-   <header class="mainheader">
-    <h1>SHS Production</h1>
+    <header class="mainheader">
+        <h1>SHS Production</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="table.html">Tables</a></li>
-                <li><a href="#">Movies</a></li>
+                <li><a href="divhandel.html">Div Handel</a></li>
                 <li><a href="#">Series</a></li>
                 <li><a href="#">Universe</a></li>
                 <li><a href="form.html">Join</a></li>
             </ul>
         </nav>
-   </header>
+    </header>
    <main>
     <h2>Please Sign Up here</h2>
     <form action="action.php">
