--- a/index.html
+++ b/index.html
@@ -3,8 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/navfoooter.css">
     <title>Blog</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body{
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 10px;
+            padding: 10px;
+        }
+
+        /* Main Section */
+        header>h2{
+            margin-top: 25px;
+            font-size: 25px;
+            font-weight: bold;
+            color: #000;
+        }
+
+        .articleheader{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        main>h2{
+            margin-top: 25px;
+            font-size: 25px;
+            font-weight: bold;
+            color: #000;
+        }
+
+        h2,h3, .edit, p{
+            margin-top: 10px;
+            margin-bottom: 20px;
+        }
+
+        .tags>a{
+            margin:10px 10px;
+        }
+
+        figcaption{
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     <header class="mainheader">
@@ -13,7 +63,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="table.html">Tables</a></li>
-                <li><a href="#">Movies</a></li>
+                <li><a href="divhandel.html">Div Handel</a></li>
                 <li><a href="#">Series</a></li>
                 <li><a href="#">Universe</a></li>
                 <li><a href="form.html">Join</a></li>
