--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/navfoooter.css">
     <style>
         main>h2 {
             text-align: left;
