--- a/divhandel.html
+++ b/divhandel.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Div Handle</title>
+    <link rel="stylesheet" href="style/navfoooter.css">
     <style>
-        *{
-            padding: 0;
-            margin: 0;
-        }
-
         body{
             background-color: bisque;
         }
-
         #css-section{
             padding: 150px 0;
             text-align: center;
@@ -55,7 +50,19 @@
     </style>
 </head>
 <body>
-    <header></header>
+    <header class="mainheader">
+        <h1>SHS Production</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="table.html">Tables</a></li>
+                <li><a href="divhandel.html">Div Handel</a></li>
+                <li><a href="#">Series</a></li>
+                <li><a href="#">Universe</a></li>
+                <li><a href="form.html">Join</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section id="css-section">
             <div class="css-container">
