--- a/table.html
+++ b/table.html
@@ -35,7 +35,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="table.html">Tables</a></li>
-                <li><a href="#">Movies</a></li>
+                <li><a href="divhandel.html">Div Handel</a></li>
                 <li><a href="#">Series</a></li>
                 <li><a href="#">Universe</a></li>
                 <li><a href="form.html">Join</a></li>
