--- a/divhandel.html
+++ b/divhandel.html
@@ -6,11 +6,8 @@
     <title>Div Handle</title>
     <link rel="stylesheet" href="style/navfoooter.css">
     <style>
-        body{
-            background-color: bisque;
-        }
         #css-section{
-            padding: 150px 0;
+            padding: 80px 0;
             text-align: center;
         }
 
@@ -19,10 +16,14 @@
             margin: 0 auto;
             display: flex;
             justify-content: space-around;
+            border: 5px solid tomato;
+            border-radius: 10px;
+            box-shadow: 2px 2px 5px tomato;
+            background-color: lightblue;
         }
 
         .css-container .css-content h1{
-            color: blue;
+            color: blueviolet;
             font-size: 40px;
             padding: 20px;
         }
@@ -43,6 +44,7 @@
         }
 
         .css-container .css-image img{
+            padding-top: 4px;
             width: 200px;
             object-fit: cover;
             border-radius: 10px;
