--- a/form.html
+++ b/form.html
@@ -6,36 +6,42 @@
     <title>Form</title>
     <link rel="stylesheet" href="style/navfoooter.css">
     <style>
+        main>h2 {
+            text-align: left;
+            margin: 22px;
+            margin-left: 2px;
+        }
+
         fieldset{
             margin-top: 20px;
             margin-bottom: 20px;
             padding: 10px;
             border: 1px solid #000;
-            }
+        }
 
-            legend{
-                font-size: 15px;
-                font-weight: bold;
-            }
+        legend{
+            font-size: 15px;
+            font-weight: bold;
+        }
 
-            label{
-                padding: 10px;
-                margin: 10px;
-                font-size: 15px;
-                font-weight: 500;
-            }
+        label{
+            padding: 10px;
+            margin: 10px;
+            font-size: 15px;
+            font-weight: 500;
+        }
 
-            .btn{
-                padding: 10px;
-                margin: 10px;
-                font-size: 15px;
-                font-weight: 500;
-                cursor: pointer;
-                background-color: #000;
-                color: #fff;
-                border: none;
-                border-radius: 10px;
-            }
+        .btn{
+            padding: 10px;
+            margin: 10px;
+            font-size: 15px;
+            font-weight: 500;
+            cursor: pointer;
+            background-color: #000;
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
